# -*- coding: utf-8 -*-

[workspace]
members = [
    "httun-client",
    "httun-conf",
    "httun-fcgi",
    "httun-protocol",
    "httun-server",
    "httun-tun",
    "httun-unix-protocol",
    "httun-util",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
homepage = "https://bues.ch/"
repository = "https://github.com/mbuesch/httun"
readme = "README.md"
categories = [ "network-programming", "web-programming::http-client", "web-programming::http-server", "cryptography" ]
keywords = [ "http", "tun", "network", "tunnel", "encrypted" ]

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
arc-swap = "1"
atoi = "2"
base64 = "0.22"
bincode = "2"
clap = { version = "4", default-features = false, features = [ "std", "help", "usage", "error-context", "derive" ] }
console-subscriber = "0.5"
env_logger = "0.11"
getrandom = "0.3"
heapless = "0.9"
hickory-resolver = "0.25"
ipnet = "2"
libc = "0.2"
log = "0.4"
memchr = "2"
nix = { version = "0.30", default-features = false }
reqwest = { version = "0.12", default-features = false }
sd-notify = "0.4"
serde = "1"
socket2 = { version = "0.6", features = [ "all" ] }
subtle = "2"
tokio = "1"
tokio-fastcgi = "1"
tokio-tun = "0.15"
toml = "0.9"
url = "2"

httun-conf = { path = "./httun-conf", version = "0.1" }
httun-protocol = { path = "./httun-protocol", version = "0.1" }
httun-tun = { path = "./httun-tun", version = "0.1" }
httun-unix-protocol = { path = "./httun-unix-protocol", version = "0.1" }
httun-util = { path = "./httun-util", version = "0.1" }

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
overflow-checks = true
codegen-units = 1

# vim: ts=4 sw=4 expandtab
