# -*- coding: utf-8 -*-

[workspace]
members = [
    "httun-client",
    "httun-conf",
    "httun-fcgi",
    "httun-protocol",
    "httun-server",
    "httun-tun",
    "httun-unix-protocol",
    "httun-util",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
homepage = "https://bues.ch/"
repository = "https://github.com/mbuesch/httun"
readme = "README.md"
categories = [ "network-programming", "web-programming::http-client", "web-programming::http-server", "cryptography" ]
keywords = [ "http", "tun", "network", "tunnel", "encrypted" ]

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
arc-swap = "1"
atoi = "2"
base64 = "0.22"
clap = { version = "4", features = [ "derive", "wrap_help", "unicode" ] }
console-subscriber = "0.5"
env_logger = "0.11"
getrandom = "0.3"
heapless = "0.9"
hickory-resolver = "0.25"
humansize = "2"
ipnet = "2"
itertools = "0.14"
libc = "0.2"
log = "0.4"
memchr = "2"
movavg = "2"
nix = { version = "0.31", default-features = false }
rand = "0.9"
reqwest = { version = "0.13", default-features = false }
rkyv = "0.8"
sd-notify = "0.4"
sha3 = "0.10"
socket2 = { version = "0.6" }
subtle = "2"
tokio = "1"
tokio-fastcgi = "1"
tokio-tun = "0.15"
toml = "0.9"
url = "2"
uuid = "1"
x25519-dalek = "2"

httun-conf = { path = "./httun-conf", version = "1" }
httun-protocol = { path = "./httun-protocol", version = "1" }
httun-tun = { path = "./httun-tun", version = "1" }
httun-unix-protocol = { path = "./httun-unix-protocol", version = "1" }
httun-util = { path = "./httun-util", version = "1" }

[workspace.lints.clippy]
# Lints from `cargo` group
cargo = "warn"
multiple-crate-versions = { level = "allow", priority = 1 }

# Lints from `pedantic` group
pedantic = "warn"
cloned_instead_of_copied = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
ignored_unit_patterns = { level = "allow", priority = 1 }
missing-errors-doc = { level = "allow", priority = 1 }
missing-panics-doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
similar-names = { level = "allow", priority = 1 }
struct-excessive-bools = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
unused_async = { level = "allow", priority = 1 }

# Lints from `restriction` group
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
mem_forget = "warn"
precedence_bits = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = true
codegen-units = 1

# vim: ts=4 sw=4 expandtab
