[package]
name = "httun-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
httun-conf = { workspace = true }
httun-protocol = { workspace = true }
httun-tun = { workspace = true }
reqwest = { workspace = true, features = [ "http2", "rustls-tls", "gzip", "brotli", "zstd", "deflate", "charset", "hickory-dns" ] }
tokio = { workspace = true, features = [ "rt-multi-thread", "signal", "sync", "net", "time" ] }
