[package]
name = "httun-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
console-subscriber = { workspace = true }
env_logger = { workspace = true }
heapless = { workspace = true }
hickory-resolver = { workspace = true, features = [ "system-config", "tokio", "tls-ring", "https-ring", "quic-ring", "webpki-roots", "dnssec-ring" ] }
httun-conf = { workspace = true }
httun-protocol = { workspace = true }
httun-util = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = [ "http2", "rustls-tls", "gzip", "brotli", "zstd", "deflate", "charset", "hickory-dns" ] }
tokio = { workspace = true, features = [ "rt-multi-thread", "signal", "sync", "net", "time", "macros", "tracing" ] }
url = { workspace = true }

[target.'cfg(target_os="linux")'.dependencies]
httun-tun = { workspace = true, optional = true }

[features]
default = [ "tun" ]
tun = [ "dep:httun-tun" ]
