[package]
name = "httun-conf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
httun-protocol = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
toml = { workspace = true }
