[package]
name = "httun-conf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
httun-protocol = { workspace = true }
httun-util = { workspace = true }
subtle = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
todo = "warn"
dbg_macro = "warn"
