[package]
name = "httun-fcgi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
httun-protocol = { workspace = true }
httun-unix-protocol = { workspace = true }
httun-util = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "signal", "sync", "net", "time", "macros" ] }
tokio-fastcgi = { workspace = true }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
todo = "warn"
dbg_macro = "warn"
