[package]
name = "httun-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
publish = false

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true, features = [ "serde" ] }
