[package]
name = "httun-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
sha3 = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true, features = [ "getrandom", "static_secrets" ]}

[lints.clippy]
undocumented_unsafe_blocks = "warn"
todo = "warn"
dbg_macro = "warn"
