[package]
name = "httun-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
httun-conf = { workspace = true }
httun-protocol = { workspace = true }
httun-unix-protocol = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "signal", "sync", "net", "time" ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
sd-notify = { workspace = true }
httun-tun = { workspace = true }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
