[package]
name = "httun-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
atoi = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
httun-conf = { workspace = true }
httun-protocol = { workspace = true }
httun-unix-protocol = { workspace = true }
httun-util = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "signal", "sync", "net", "time", "macros" ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
httun-tun = { workspace = true }
nix = { workspace = true, features = [ "user" ] }
sd-notify = { workspace = true }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
