[package]
name = "httun-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
atoi = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
console-subscriber = { workspace = true }
env_logger = { workspace = true }
httun-conf = { workspace = true }
httun-protocol = { workspace = true }
httun-unix-protocol = { workspace = true }
httun-util = { workspace = true }
ipnet = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "signal", "sync", "net", "time", "macros", "tracing" ] }

[target.'cfg(target_os="linux")'.dependencies]
httun-tun = { workspace = true, optional = true }
sd-notify = { workspace = true }

[target.'cfg(target_family="unix")'.dependencies]
nix = { workspace = true, features = [ "user" ] }

[features]
default = [ "tun" ]
tun = [ "dep:httun-tun" ]

[lints]
workspace = true
