[package]
name = "httun-tun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
httun-protocol = { workspace = true }
tokio = { workspace = true, features = [ "sync", "net", "time" ] }
tokio-tun = { workspace = true }
