[package]
name = "httun-unix-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, features = [ "serde" ] }
serde = { workspace = true, features = [ "derive" ] }
