[package]
name = "httun-unix-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, features = [ "serde" ] }
httun-util = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
