[package]
name = "httun-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
atoi = { workspace = true }
log = { workspace = true }
memchr = { workspace = true }
rkyv = { workspace = true }
tokio = { workspace = true, features = [ "net" ] }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
todo = "warn"
dbg_macro = "warn"
